syntax = "proto3";

package admin;

option go_package = "jh_admin_service/api/backend/admin/v1";

service Admin {
    rpc Login(LoginReq) returns (LoginRes) {}
    rpc RefreshToken(RefreshTokenReq) returns (RefreshTokenRes) {}
    rpc CreateAdmin(CreateAdminReq) returns (CreateAdminRes) {}
    rpc Logout(LogoutReq) returns (LogoutRes) {}
    rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordRes) {}
}

message LoginReq {
    string username = 1; // v: required
    string password = 2; // v: required
    string code = 3;     // Google 2FA code (optional)
}

message LoginRes {
    string token = 1;
    string socket = 2;
}

message RefreshTokenReq {}

message RefreshTokenRes {
    string token = 1;
}

message CreateAdminReq {
    string username = 1; // v: required|alpha_num|min:4|max:12
    string password = 2; // v: required|alpha_num|min:6|max:20
    string nickname = 3; // v: required|alpha_num|min:2|max:20
    int32 role = 4;      // v: required|numeric
    int32 status = 5;    // v: required|boolean
}

message CreateAdminRes {}

// 退出登录请求
message LogoutReq {}

// 退出登录响应
message LogoutRes {
    bool success = 1;                                    // 是否成功
    string message = 2;                                  // 响应消息
}

// 修改密码请求
message ChangePasswordReq {
    string old_password = 1;                             // 旧密码
    string new_password = 2;                             // 新密码
}

// 修改密码响应
message ChangePasswordRes {
    bool success = 1;                                    // 是否成功
    string message = 2;                                  // 响应消息
}
