package admin

import (
	"context"
	v2 "jh_admin_service/api/backend/admin/v1"
	"jh_admin_service/internal/service/backend"

	"github.com/gogf/gf/contrib/rpc/grpcx/v2"
)

type Controller struct {
	v2.UnimplementedAdminServer
}

func Register(s *grpcx.GrpcServer) {
	v2.RegisterAdminServer(s.Server, &Controller{})
}

// Login 管理员登录
func (*Controller) Login(ctx context.Context, req *v2.LoginReq) (res *v2.LoginRes, err error) {
	return backend.Admin().Login(ctx, req)
}

// RefreshToken 刷新token
func (*Controller) RefreshToken(ctx context.Context, req *v2.RefreshTokenReq) (res *v2.RefreshTokenRes, err error) {
	return backend.Admin().RefreshToken(ctx, req)
}

// CreateAdmin 创建管理员
func (*Controller) CreateAdmin(ctx context.Context, req *v2.CreateAdminReq) (res *v2.CreateAdminRes, err error) {
	return backend.Admin().CreateAdmin(ctx, req)
}

// GetAdminList 获取管理员列表
func (*Controller) GetAdminList(ctx context.Context, req *v2.GetAdminListReq) (res *v2.GetAdminListRes, err error) {
	return backend.Admin().GetAdminList(ctx, req)
}

// UpdateAdmin 更新管理员
func (*Controller) UpdateAdmin(ctx context.Context, req *v2.UpdateAdminReq) (res *v2.UpdateAdminRes, err error) {
	return backend.Admin().UpdateAdmin(ctx, req)
}

// DeleteAdmin 删除管理员
func (*Controller) DeleteAdmin(ctx context.Context, req *v2.DeleteAdminReq) (res *v2.DeleteAdminRes, err error) {
	return backend.Admin().DeleteAdmin(ctx, req)
}

// Logout 退出登录
func (*Controller) Logout(ctx context.Context, req *v2.LogoutReq) (res *v2.LogoutRes, err error) {
	return backend.Admin().Logout(ctx, req)
}

// ChangePassword 修改密码
func (*Controller) ChangePassword(ctx context.Context, req *v2.ChangePasswordReq) (res *v2.ChangePasswordRes, err error) {
	return backend.Admin().ChangePassword(ctx, req)
}
